# rust-dpdk-app

./: .gitignore  Cargo.toml  README.md
dpdk-app/: Cargo.toml
dpdk-app/src/: main.rs
dpdk-app/src/applib/: mod.rs
dpdk-app/src/lib/: rte_api.rs  utils.rs
dpdk-common/: Cargo.toml
dpdk-common/src/: lib.rs
dpdk-lib/: Cargo.toml  build.rs
flow-lib/: Cargo.toml
flow-lib/src/: lib.rs
