[package]
name = "flow_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.96"

[dependencies]
dpdklib = {path = "../dpdk-lib"}
dpdk_common = {path = "../dpdk-common" }